--- a/ramdisk/init.wifi.rc
+++ b/ramdisk/init.wifi.rc
@@ -38,3 +38,13 @@ service iprenew_wlan0 /system/bin/dhcpcd -n
     disabled
     oneshot
 
+service sta_connected /system/bin/am broadcast -a com.asus.softap.action.STA_CONNECTED
+    class main
+    disabled
+    oneshot
+
+service sta_disconnected /system/bin/am broadcast -a com.asus.softap.action.STA_DISCONNECTED
+    class main
+    disabled
+    oneshot
+
